--- a/mind-models/_config.yml
+++ b/mind-models/_config.yml
@@ -3,7 +3,7 @@
 
 title: Models of the Mind
 author: James Magnuson
-logo: logo_mm.png
+logo: logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
